--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,1 +1,29 @@
-<p>navbar works!</p>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand ms-5" href="/home">Navbar</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse"
+          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+          aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link ms-3" routerLink="/home">Home</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link ms-3" routerLink="/recipe-list">Recipe List</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link ms-3" routerLink="/recipe-detail">Recipe Detail</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link ms-3" routerLink="/form">Recipe Form</a>
+      </li>
+    </ul>
+    <form class="d-flex ms-auto">
+      <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success me-3" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
