j'ai fiat la creation affcihege les recetes en recipe-list

--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand ms-5" href="/home">Navbar</a>
+<nav class="navbar navbar-expand-lg navbar-nav-scroll bg-success">
+  <a class="navbar-brand ms-5 text-light"  href="/home"><i style="height: 90px; width: 50px"   class="bi bi-egg-fried"></i></a>
   <button class="navbar-toggler" type="button" data-toggle="collapse"
           data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
           aria-expanded="false" aria-label="Toggle navigation">
