--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,12 +1,23 @@
-<div class="container">
-  <div class="d-flex justify-content-between">
-    <div class="card " style="width: 18rem;" *ngFor="let recipes of recipesList">
-      <img class="card-img-top" src="{{recipes.img}}" alt="Card image cap">
-      <div class="card-body">
-        <h5 class="card-title">{{recipes.nom}}</h5>
-        <p class="card-text">{{recipes.ingredients}}</p>
-        <p>{{recipes.etapes}}</p>
-        <p><b>Ctegory : </b> <span>{{recipes.categorie}}</span></p>
+<div class="container my-4">
+  <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+    <div class="col" *ngFor="let recipes of recipesList">
+      <div class="card h-100">
+        <img [src]="recipes.img" class="card-img-top" alt="Recipe image" style="height: 200px; object-fit: cover;">
+        <div class="card-body d-flex flex-column">
+          <h5 class="card-title">{{ recipes.nom }}</h5>
+          <p class="card-text ING"><b>Ingrédients :</b> <br>{{ recipes.ingredients }}</p>
+          <p><b>Étapes :</b> {{ recipes.etapes }}</p>
+          <p><b>Catégorie :</b> <span>{{ recipes.categorie }}</span></p>
+          <p><b>Date :</b> {{ recipes.data | date}}</p>
+          <div class="mt-auto d-flex justify-content-between">
+            <button (click)="deleteRecipe(recipes.id)" class="btn btn-danger">
+              <i class="bi bi-trash3"></i>
+            </button>
+            <button class="btn btn-primary">
+              <i class="bi bi-eyeglasses"></i>
+            </button>
+          </div>
+        </div>
       </div>
     </div>
   </div>
