--- a/src/app/form-recipe/form-recipe.component.html
+++ b/src/app/form-recipe/form-recipe.component.html
@@ -18,16 +18,23 @@
         <input [(ngModel)]="recipe.etapes" class="form-control"   type="text"  name="etapes" >
       </div>
 
-      <div>
+      <div class="mb-3">
         <label class="form-label">un image :</label><br>
         <input  [(ngModel)]="recipe.img" class="form-control" type="text"  name="img" >
       </div>
 
-      <div class="mb-3">
-        <label class="form-label" >les categorie :</label><br>
-        <input [(ngModel)]="recipe.categorie" class="form-control"   type="text"  name="categorie" >
+
+      <div class="col-auto my-1 mb-3">
+        <label class="mr-sm-2 mb-2" >Categorie</label><br>
+        <select name="categorie" class="custom-select mr-sm-2"  [(ngModel)]="recipe.categorie">
+          <option  value="Entrée">Entrée</option>
+          <option  value="Plat principal">Plat principal</option>
+          <option  value="Dessert">Dessert</option>
+          <option  value="Soupe">Soupe</option>
+          <option  value="Salade">Salade</option>
+        </select>
       </div>
-      <input  class="form-control-lg btn btn-outline-danger" type="submit" value="Ajouter">
+      <input  class="mt-3 mb-3 form-control-lg btn btn-outline-danger" type="submit" value="Ajouter">
     </form>
   </div>
 </div>
