--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,7 +1,13 @@
 <div class="container my-4">
+  <div class="d-flex justify-content-between mb-3 ">
+    <button (click)="selectionParcategorie='Entrée'" class="btn btn-warning">Entrée</button> <button (click)="selectionParcategorie='Plat principal'" class="btn btn-warning">Plat principal</button>
+    <button (click)="selectionParcategorie='Dessert'" class="btn btn-warning">Dessert</button> <button (click)="selectionParcategorie='Soupe'" class="btn btn-warning">Soupe </button>
+    <button (click)="selectionParcategorie='Salade'" class="btn btn-warning">Salade</button> <button (click)="selectionParcategorie=''" class="btn btn-dark">Toute</button>
+  </div>
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
+
     <div class="col" *ngFor="let recipes of recipesList">
-      <div class="card h-100">
+      <div class="card h-100" *ngIf="(!selectionParcategorie || recipes.categorie == selectionParcategorie)  ">
         <img [src]="recipes.img" class="card-img-top" alt="Recipe image" style="height: 200px; object-fit: cover;">
         <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ recipes.nom }}</h5>
@@ -13,7 +19,7 @@
             <button (click)="deleteRecipe(recipes.id)" class="btn btn-danger">
               <i class="bi bi-trash3"></i>
             </button>
-            <button class="btn btn-primary">
+            <button [routerLink]="['/recipe-detail',recipes.id]" class="btn btn-primary">
               <i class="bi bi-eyeglasses"></i>
             </button>
           </div>
