--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -1,4 +1,8 @@
 <div class="container my-4">
+  <div class="d-flex justify-content-center align-items-center mb-3">
+    <label class="form-label me-2 mb-0"><strong>Rechercher :</strong></label>
+    <input type="search" [(ngModel)]="rechercherRecipe" placeholder="Rechercher une recette" class="form-control w-auto">
+  </div>
   <div class="d-flex justify-content-between mb-3 ">
     <button (click)="selectionParcategorie='Entrée'" class="btn btn-warning">Entrée</button> <button (click)="selectionParcategorie='Plat principal'" class="btn btn-warning">Plat principal</button>
     <button (click)="selectionParcategorie='Dessert'" class="btn btn-warning">Dessert</button> <button (click)="selectionParcategorie='Soupe'" class="btn btn-warning">Soupe </button>
@@ -7,7 +11,7 @@
   <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-4">
 
     <div class="col" *ngFor="let recipes of recipesList">
-      <div class="card h-100" *ngIf="(!selectionParcategorie || recipes.categorie == selectionParcategorie)  ">
+      <div class="card h-100" *ngIf="(!selectionParcategorie || recipes.categorie == selectionParcategorie) && (!rechercherRecipe || recipes.nom.toLowerCase().includes(rechercherRecipe.toLowerCase()))">
         <img [src]="recipes.img" class="card-img-top" alt="Recipe image" style="height: 200px; object-fit: cover;">
         <div class="card-body d-flex flex-column">
           <h5 class="card-title">{{ recipes.nom }}</h5>
