--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,3 +1,90 @@
-*{
+.back{
   background-color: greenyellow;
+  height: 100vh;
 }/* You can add global styles to this file, and also import other style files */
+:root {
+  --hello-green: #b6e090;
+  --dark-green: #386641;
+  --text-color: #000;
+}
+
+
+
+.header-section {
+  padding: 3rem 1rem;
+  text-align: center;
+}
+
+.main-title {
+  font-size: 3.5rem;
+  font-weight: 900;
+  letter-spacing: 1px;
+  margin-bottom: 0.5rem;
+}
+
+.subtitle {
+  font-size: 1.7rem;
+  font-weight: 700;
+  margin-bottom: 0.5rem;
+}
+
+.location {
+  font-size: 1.7rem;
+  font-weight: 700;
+  margin-bottom: 1.5rem;
+}
+
+.description {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+}
+
+.recipe-btn {
+  background-color: #2b4d33;
+  color: white;
+  padding: 0.5rem 2rem;
+  font-weight: 600;
+  border: none;
+  margin-bottom: 2rem;
+  font-size: 1rem;
+  text-transform: uppercase;
+}
+
+
+
+.recipe-card {
+  margin-bottom: 1.5rem;
+  text-align: center;
+}
+
+.recipe-img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  border-radius: 8px;
+  margin-bottom: 0.75rem;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.show-btn {
+  background-color: black;
+  color: white;
+  border: none;
+  border-radius: 20px;
+  padding: 0.3rem 1.5rem;
+  font-size: 0.9rem;
+}
+
+.show-btn:hover {
+  background-color: #333;
+}
+
+@media (max-width: 768px) {
+  .main-title {
+    font-size: 2.5rem;
+  }
+
+  .subtitle, .location {
+    font-size: 1.4rem;
+  }
+}
