--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -24,7 +24,7 @@
               <i class="bi bi-trash3"></i>
             </button>
             <button [routerLink]="['/recipe-detail',recipes.id]" class="btn btn-primary">
-              <i class="bi bi-eyeglasses"></i>
+              <i class="bi bi-arrow-right"></i>
             </button>
           </div>
         </div>
