--- a/src/app/recipe-detail/recipe-detail.component.css
+++ b/src/app/recipe-detail/recipe-detail.component.css
@@ -3,7 +3,10 @@
   --dark-green: #8bc34a;
   --text-color: #333;
 }
-
+.back{
+  background-color: greenyellow;
+  height: 100vh;
+}
 .container {
   background-color: var(--dark-green);
 }
