--- a/src/app/recipe-list/recipe-list.component.html
+++ b/src/app/recipe-list/recipe-list.component.html
@@ -23,7 +23,7 @@
             <button (click)="deleteRecipe(recipes.id)" class="btn btn-danger">
               <i class="bi bi-trash3"></i>
             </button>
-            <button [routerLink]="['/recipe-detail',recipes.id]" class="btn btn-primary">
+            <button [routerLink]="['/admin/recipe-detail',recipes.id]" class="btn btn-primary">
               <i class="bi bi-arrow-right"></i>
             </button>
           </div>
