--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,29 +1,40 @@
-<nav class="navbar navbar-expand-lg navbar-nav-scroll bg-success">
-  <a class="navbar-brand ms-5 text-light"  href="/home"><i style="height: 90px; width: 50px"   class="bi bi-egg-fried"></i></a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse"
-          data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
-          aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<nav class="navbar navbar-expand-lg bg-light">
+  <div class="container-fluid">
 
-  <div class="collapse navbar-collapse" id="navbarSupportedContent">
-    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-      <li class="nav-item active">
-        <a class="nav-link ms-3" routerLink="/home">Home</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link ms-3" routerLink="/recipe-list">Recipe List</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link ms-3" routerLink="/recipe-detail">Recipe Detail</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link ms-3" routerLink="/form">Recipe Form</a>
-      </li>
-    </ul>
-    <form class="d-flex ms-auto">
-      <input class="form-control me-2 " type="search" placeholder="Search" aria-label="Search">
-      <button class="btn btn-outline-success me-3" type="submit">Search</button>
-    </form>
+    <!-- Logo à gauche -->
+    <a class="navbar-brand ms-5" routerLink="/home">
+      <i class="bi bi-egg-fried text-success" style="font-size: 2rem;"></i>
+    </a>
+
+    <!-- Toggler pour mobile -->
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+            data-bs-target="#navbarNav" aria-controls="navbarNav"
+            aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <!-- Menu centré -->
+    <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
+      <ul class="navbar-nav">
+        <li class="nav-item mx-3">
+          <a class="nav-link fw-bold text-dark" routerLink="/admin/home">Home</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link fw-bold text-dark" routerLink="/admin/recipe-list">Recipe-list</a>
+        </li>
+        <li class="nav-item mx-3">
+          <a class="nav-link fw-bold text-dark" routerLink="/admin/form">Recipe-detail</a>
+        </li>
+      </ul>
+    </div>
+
+
+    <div class="d-flex me-5">
+      <a class="nav-link btn btn-danger" (click)="logout()">
+        <i class="text-danger bi bi-door-closed-fill text-dark" style="font-size: 1.3rem;"></i>
+      </a>
+    </div>
+
   </div>
 </nav>
+<router-outlet> </router-outlet>
