--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,19 +1,18 @@
 <nav class="navbar navbar-expand-lg bg-light">
   <div class="container-fluid">
 
-    <!-- Logo à gauche -->
-    <a class="navbar-brand ms-5" routerLink="/home">
+
+    <a class="navbar-brand ms-5" routerLink="/admin/home">
       <i class="bi bi-egg-fried text-success" style="font-size: 2rem;"></i>
     </a>
 
-    <!-- Toggler pour mobile -->
+
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
             data-bs-target="#navbarNav" aria-controls="navbarNav"
             aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <!-- Menu centré -->
     <div class="collapse navbar-collapse justify-content-center" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item mx-3">
@@ -22,16 +21,16 @@
         <li class="nav-item mx-3">
           <a class="nav-link fw-bold text-dark" routerLink="/admin/recipe-list">Recipe-list</a>
         </li>
-        <li class="nav-item mx-3">
-          <a class="nav-link fw-bold text-dark" routerLink="/admin/form">Recipe-detail</a>
+        <li class="nav-item mx-3" *ngIf="authServices.hasRole('ADMIN')">
+          <a class="nav-link fw-bold text-dark" routerLink="/admin/form">Recipe-Form</a>
         </li>
       </ul>
     </div>
 
-
     <div class="d-flex me-5">
-      <a class="nav-link btn btn-danger" (click)="logout()">
-        <i class="text-danger bi bi-door-closed-fill text-dark" style="font-size: 1.3rem;"></i>
+        <button class="btn btn-success">{{authServices.authenticatedUser!.username}}</button>
+      <a class="nav-link" (click)="logout()">
+        <button class="btn btn-danger ms-3">logout</button>
       </a>
     </div>
 
